prevent tabmenu from dropping down on small windows

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -109,6 +109,7 @@ div#header-bottom-left, body.res-nightmode div#header-bottom-left {
         margin:0;
         vertical-align:top;
         overflow:hidden;
+        position:absolute;
 
         li {
             background-color:transparent;
